PostGIS 2.0.2
2012/08/DD

* Bug Fixes *

  - #1391, Errors during upgrade from 1.5
  - #1891, Use LDFLAGS environment when building liblwgeom
  - #1900, Fix pgsql2shp for big-endian systems 
  - #1932, Fix raster2pgsql for invalid syntax for setting index tablespace
  - #1955, ST_ModEdgeHeal and ST_NewEdgeHeal for doubly connected edges
  - #1957, ST_Distance to a one-point LineString returns NULL
  - #1981, Remove unused but set variables as found with gcc 4.6+

PostGIS 2.0.1
2012/06/22

* Bug Fixes *

  - #1264, fix st_dwithin(geog, geog, 0). 
  - #1468  shp2pgsql-gui table column schema get shifted
  - #1694, fix building with clang. (vince)
  - #1708, improve restore of pre-PostGIS 2.0 backups.
  - #1714, more robust handling of high topology tolerance.
  - #1755, ST_GeographyFromText support for higher dimensions.
  - #1759, loading transformed shapefiles in raster enabled db.
  - #1761, handling of subdatasets in NetCDF, HDF4 and HDF5 in raster2pgsql.
  - #1763, topology.toTopoGeom use with custom search_path.
  - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
  - #1774, Clearer error on setting an edge geometry to an invalid one.
  - #1775, ST_ChangeEdgeGeom collision detection with 2-vertex target.
  - #1776, fix ST_SymDifference(empty, geom) to return geom.
  - #1779, install SQL comment files.
  - #1782, fix spatial reference string handling in raster.
  - #1789, fix false edge-node crossing report in ValidateTopology.
  - #1790, fix toTopoGeom handling of duplicated primitives.
  - #1791, fix ST_Azimuth with very close but distinct points.
  - #1797, fix (ValidateTopology(xxx)).* syntax calls.
  - #1805, put back the 900913 SRID entry.
  - #1813, Only show readable relations in metadata tables. 
  - #1819, fix floating point issues with ST_World2RasterCoord and
           ST_Raster2WorldCoord variants.
  - #1820  compilation on 9.2beta1.
  - #1822, topology load on PostgreSQL 9.2beta1.
  - #1825, fix prepared geometry cache lookup